--- a/style.css
+++ b/style.css
@@ -323,15 +323,15 @@ header {
 
 .next-page {
   display: flex;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 .next-page a{
   background: var(--main-color);
-  padding: 12px 20px;
-  color: --text-color;
+  padding: 10px 20px;
+  color: var(--text-color);
   letter-spacing: 1px;
   font-weight:  500;
 }
