--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 }
 
 section {
-  padding: 5rem 0 3rem;
+  padding: 5rem 0 2rem;
 }
 
 img {
@@ -465,5 +465,17 @@ footer {
   }
   .notification {
     width: 270px;
+  }
+  .home {
+    min-height: 214px;
+  }
+  .heading .bx {
+    padding: 8px;
+  }
+  .heading h2 {
+    font-size: 1.1rem;
+  }
+  .box {
+    height: 420px;
   }
 }
