--- a/style.css
+++ b/style.css
@@ -36,6 +36,72 @@ body {
   background: var(--dark-color);
 }
 
+.bg-box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.bg-box .group {
+    position: relative;
+    transform: rotate(-30deg);
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.iconContainer{
+    display: flex;
+    gap: 0.5em;
+    font-size: 4em;
+    width: 200vw;
+    animation: animate 80s linear infinite;
+}
+
+@keyframes animate{
+    0%,100%{
+        transform: translateX(-100vw);
+    }
+    50%{
+        transform: translateX(0vw);
+    }
+}
+
+.iconContainer:nth-child(even){
+    animation: animate2 80s linear infinite;
+}
+
+@keyframes animate2{
+    0%,100%{
+        transform: translateX(0vw);
+    }
+    50%{
+        transform: translateX(-100vw);
+    }
+}
+
+.iconContainer i{
+    cursor: default;
+    user-select: none;
+    transition: 2s;
+    color: transparent;
+    opacity: 0.35;
+    -webkit-text-stroke: 1px var(--main-color);
+}
+
+.iconContainer i:hover{
+    color: #0f0;
+    transition: 0s;
+    -webkit-text-stroke: 1px transparent;
+    opacity: 1;
+    text-shadow: 0 0 120px var(--main-color);
+}
+
 .container {
   max-width: 1068px;
   margin: auto;
@@ -242,7 +308,7 @@ header {
   height: 100%;
   object-fit: cover;
   border-radius: 1.4rem;
-  z-index: -1;
+  z-index: 1;
 }
 
 .home-text {
