--- a/style.css
+++ b/style.css
@@ -37,69 +37,71 @@ body {
 }
 
 .bg-box {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .bg-box .group {
-    position: relative;
-    transform: rotate(-30deg);
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+  position: relative;
+  transform: rotate(-30deg);
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-.iconContainer{
-    display: flex;
-    gap: 0.5em;
-    font-size: 4em;
-    width: 200vw;
-    animation: animate 80s linear infinite;
+.iconContainer {
+  display: flex;
+  gap: 0.5em;
+  font-size: 4em;
+  width: 200vw;
+  animation: animate 80s linear infinite;
 }
 
-@keyframes animate{
-    0%,100%{
-        transform: translateX(-100vw);
-    }
-    50%{
-        transform: translateX(0vw);
-    }
+@keyframes animate {
+  0%,
+  100% {
+    transform: translateX(-100vw);
+  }
+  50% {
+    transform: translateX(0vw);
+  }
 }
 
-.iconContainer:nth-child(even){
-    animation: animate2 80s linear infinite;
+.iconContainer:nth-child(even) {
+  animation: animate2 80s linear infinite;
 }
 
-@keyframes animate2{
-    0%,100%{
-        transform: translateX(0vw);
-    }
-    50%{
-        transform: translateX(-100vw);
-    }
+@keyframes animate2 {
+  0%,
+  100% {
+    transform: translateX(0vw);
+  }
+  50% {
+    transform: translateX(-100vw);
+  }
 }
 
-.iconContainer i{
-    cursor: default;
-    user-select: none;
-    transition: 2s;
-    color: transparent;
-    opacity: 0.35;
-    -webkit-text-stroke: 1px var(--main-color);
+.iconContainer i {
+  cursor: default;
+  user-select: none;
+  transition: 2s;
+  color: transparent;
+  opacity: 0.35;
+  -webkit-text-stroke: 1px var(--main-color);
 }
 
-.iconContainer i:hover{
-    color: #0f0;
-    transition: 0s;
-    -webkit-text-stroke: 1px transparent;
-    opacity: 1;
-    text-shadow: 0 0 120px var(--main-color);
+.iconContainer i:hover {
+  color: #0f0;
+  transition: 0s;
+  -webkit-text-stroke: 1px transparent;
+  opacity: 1;
+  text-shadow: 0 0 120px var(--main-color);
 }
 
 .container {
@@ -332,6 +334,7 @@ header {
 }
 
 .heading .bx {
+  z-index: 10;
   font-size: 21px;
   color: var(--text-color);
   background: var(--main-color);
@@ -340,6 +343,7 @@ header {
 }
 
 .heading h2 {
+  z-index: 10;
   font-size: 1.2rem;
   font-weight: 500;
 }
@@ -394,6 +398,7 @@ header {
 }
 
 .next-page a {
+  z-index: 10;
   background: var(--main-color);
   padding: 10px 20px;
   color: var(--text-color);
